{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 86,
  "lineage": "d914e86b-de29-fc7f-2747-bbc0ffb2d121",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.46.10.0/24"
            ],
            "dns_servers": [
              "10.53.244.4"
            ],
            "guid": "6092710a-0af3-466f-abe7-20cb03a73c42",
            "id": "/subscriptions/ffc5e617-7f2d-4ddb-8b57-33fc43989a8c/resourceGroups/b9cee3-tools-networking/providers/Microsoft.Network/virtualNetworks/b9cee3-tools-vwan-spoke",
            "location": "canadacentral",
            "name": "b9cee3-tools-vwan-spoke",
            "resource_group_name": "b9cee3-tools-networking",
            "subnets": [
              "ghr-aca",
              "ghr-aci",
              "private-endpoints"
            ],
            "tags": {
              "account_coding": "1337124E3035365027100000",
              "billing_group": "b9cee3",
              "deployedBy": "azure-lz-vending-live",
              "ministry_name": "FLNR"
            },
            "vnet_peerings": {
              "RemoteVnetToHubPeering_248fea99-6c92-49fe-9f94-e804706a4074": "/subscriptions/e8d8ef98-c03d-4606-9854-e365453d88f3/resourceGroups/RG_bcgov-managed-lz-live-hub-canadacentral_a76c722f-6cc3-4220-aeaa-ed3824da42ff/providers/Microsoft.Network/virtualNetworks/HV_bcgov-managed-lz-liv_d3392fd0-0782-45c9-8989-87d98fbfcaef"
            },
            "vnet_peerings_addresses": [
              "10.53.240.0/20"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "github_runners_container_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ffc5e617-7f2d-4ddb-8b57-33fc43989a8c/resourceGroups/b9cee3-tools-quickstart-azure/providers/Microsoft.Network/networkSecurityGroups/ghr-aca",
            "location": "canadacentral",
            "name": "ghr-aca",
            "resource_group_name": "b9cee3-tools-quickstart-azure",
            "security_rule": [],
            "tags": {
              "account_coding": "1337124E3035365027100000",
              "billing_group": "b9cee3",
              "ministry_name": "FLNR"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "github_runners_container_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ffc5e617-7f2d-4ddb-8b57-33fc43989a8c/resourceGroups/b9cee3-tools-quickstart-azure/providers/Microsoft.Network/networkSecurityGroups/ghr-aci",
            "location": "canadacentral",
            "name": "ghr-aci",
            "resource_group_name": "b9cee3-tools-quickstart-azure",
            "security_rule": [],
            "tags": {
              "account_coding": "1337124E3035365027100000",
              "billing_group": "b9cee3",
              "ministry_name": "FLNR"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "github_runners_private_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ffc5e617-7f2d-4ddb-8b57-33fc43989a8c/resourceGroups/b9cee3-tools-quickstart-azure/providers/Microsoft.Network/networkSecurityGroups/private-endpoints",
            "location": "canadacentral",
            "name": "private-endpoints",
            "resource_group_name": "b9cee3-tools-quickstart-azure",
            "security_rule": [],
            "tags": {
              "account_coding": "1337124E3035365027100000",
              "billing_group": "b9cee3",
              "ministry_name": "FLNR"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.github_runners",
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.github_runners",
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.github_runners",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    }
  ]
}